I have made an edit to a file!

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <link rel="stylesheet" href="./assets/css/style.css" /> -->
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@0;1&family=Open+Sans:wght@300&family=Space+Mono&family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@0;1&family=Open+Sans:ital,wght@1,300&family=Space+Mono&family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@0;1&family=Open+Sans&family=Space+Mono&family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@0;1&family=Open+Sans:ital@1&family=Space+Mono&family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@0;1&family=Open+Sans:wght@600&family=Space+Mono&family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@0;1&family=Open+Sans:ital,wght@0,600;1,600&family=Space+Mono&family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@0;1&family=Open+Sans:wght@700&family=Space+Mono&family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Merriweather:ital@0;1&family=Open+Sans:ital,wght@0,700;1,700&family=Space+Mono&family=Work+Sans&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="./assets/css/style.css" /> 
   </head>
 
   <body>
@@ -38,7 +47,7 @@
 
         <div>
           <figure>
-            <img src="./assets/images/harrystyles.png" alt="harrystyles" width="1000">
+            <img src="./assets/images/harrystyles.png" alt="harrystyles">
             <!-- Figcaption element to caption your image -->
             <figcaption>
             Harry Styles performing free concert fundraiser for US wildfire relief
